completed app with front end
