# api/swagger/swagger.yaml
@@ -1,33 +1,38 @@
-swagger: 2.0
+swagger: 2
 info:
-  version: "0.0.1"
-  title: Eats
-# during dev, should point to your local machine
+  version: 0.0.1
+  title: Eats-Sample
 host: localhost
-# basePath prefixes all resource paths 
 basePath: /
-# 
 schemes:
-  # tip: remove http to make production-grade
   - http
   - https
-# format of bodies a client can send (Content-Type)
 consumes:
   - application/json
-# format of the responses to the client (Accepts)
 produces:
-  - application/json
-x-volos-resources: {}
+  - application/
+x-volos-resources:
+  cache:
+    provider: volos-cache-memory
+    options:
+      name: name
+      ttl: 10000
+  quota:
+    provider: volos-quota-memory
+    options:
+      timeUnit: hour
+      interval: 1
+      allow: 2
 paths:
   /hello:
-    # binds a127 app logic to a route
     x-swagger-router-controller: hello_world
     x-volos-authorizations: {}
     x-volos-apply: {}
     get:
-      description: Returns 'Hello' to the caller
-      # used as the method name of the controller
+      description: "Returns 'Hello' to the caller"
       operationId: hello
+      produces:
+        - application/json
       parameters:
         - name: name
           in: query
@@ -37,60 +42,55 @@ paths:
       responses:
         "200":
           description: Success
-          schema:
-            # a pointer to a definition
-            $ref: HelloWorldResponse
-        # responses may fall through to errors
+          schema: {}
         default:
           description: Error
-          schema:
-            $ref: ErrorResponse
+          schema: {}
   /restaurants:
-    # binds a127 app logic to a route
     x-swagger-router-controller: restaurants
     x-volos-authorizations: {}
-    x-volos-apply: {}
+    x-volos-apply:
+      cache: []
     get:
-      description: Returns all the restaurants
-      # used as the method name of the controller
+      description: Returns a list of restaurants
       operationId: getRestaurants
+      produces:
+        - application/json
       responses:
-        "201":
+        "200":
           description: Success
-          schema:
-            # a pointer to a definition
-            $ref: HelloWorldResponse
-        # responses may fall through to errors
+          schema: {}
         default:
           description: Error
-          schema:
-            $ref: ErrorResponse
-  /restaurants/{id}:
-    # binds a127 app logic to a route
+          schema: {}
+  "/restaurants/{id}":
     x-swagger-router-controller: restaurants
     x-volos-authorizations: {}
     x-volos-apply: {}
     get:
-      description: returns single restaurants by its restId
-      # used as the method name of the controller
-      operationId: getRestaurantById
+      description: Returns a single restaurant and its reviews
+      operationId: getRestaurantByID
+      produces:
+        - application/json
       parameters:
         - name: id
           in: path
-          description: The restaurant id (restId) key of the record
+          description: The restID of the restaurant
           required: true
-          type: integer
+          type: number
       responses:
-        "201":
+        "200":
           description: Success
-          schema:
-            # a pointer to a definition
-            $ref: HelloWorldResponse
-        # responses may fall through to errors
+          schema: {}
+        "404":
+          description: Restaurant not found
+          schema: {}
+        "500":
+          description: Invalid restaurant ID supplied
+          schema: {}
         default:
           description: Error
-          schema:
-            $ref: ErrorResponse
+          schema: {}
   /reviews:
     x-swagger-router-controller: reviews
     x-volos-authorizations: {}
@@ -124,7 +124,8 @@ paths:
           description: Error
           schema: {}
     post:
-      x-volos-apply: {}
+      x-volos-apply:
+        quota: []
       description: Posts a new review
       operationId: postReview
       parameters:
@@ -132,8 +133,7 @@ paths:
           in: body
           description: Post review and rating
           required: false
-          schema: 
-            $ref: "#/definitions/Review"
+          schema: {}
       produces:
         - application/json
       responses:
@@ -143,7 +143,45 @@ paths:
         default:
           description: Error
           schema: {}
-# complex objects have schema definitions
+  /users:
+    x-swagger-router-controller: users
+    x-volos-authorizations: {}
+    x-volos-apply:
+      cache: []
+    get:
+      description: Returns a list of users
+      operationId: getUsers
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: Success
+          schema: {}
+        default:
+          description: Error
+          schema: {}
+  /users/{username}:
+    x-swagger-router-controller: users
+    x-volos-authorizations: {}
+    x-volos-apply: {}
+    get:
+      description: Returns a single user
+      operationId: getUserByID
+      produces:
+        - application/json
+      parameters:
+        - name: username
+          in: path
+          description: The username of the user
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema: {}
+        default:
+          description: Error
+          schema: {}
 definitions:
   Review:
     properties:
